argocd/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: todolist-app
spec:
  selector:
    matchLabels:
      app: todolist-app
      tier: backend
  #  strategy:
  #    type: Recreate
  template:
    metadata:
      name: webserver-pod
      labels:
        app: todolist-app
        tier: backend
    spec:
      containers:
        - image: maxdev888/todo-list-app:backend-39
          name: backend-container
          ports:
            - containerPort: 8081
              name: webserver-port
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: todolist-app
    tier: backend
spec:
  # type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: todolist-app
    tier: backend
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress-svc
#   namespace: k8-deployment
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: todolist.app.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-svc
#                 port:
#                   number: 8081
