argocd/database-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: todolist-app
    tier: database
spec:
  clusterIP: None
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: todolist-app
    tier: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  labels:
    app: todolist-app
    tier: database
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: todolist-app
      tier: database
  template:
    metadata:
      name: mysql-pod
      labels:
        app: todolist-app
        tier: database
    spec:
      containers:
      - name: mysql-container
        image: maxdev888/todo-list-app:database-36
        ports:
        - containerPort: 3306
          name: mysql-port
        resources:
          limits:
            cpu: "500m"
            memory: 1Gi
          requests:
            cpu: "500m"
            memory: 1Gi
        volumeMounts:
        - name: mysql-vol
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
